Added dd list of registered rovers.
